--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "testMqttSync": "mocha -w MqttSync.test.js -b"
   },
   "dependencies": {
+    "chalk": "^4.1.2",
     "lodash": "^4.17.21",
     "loglevel": "^1.8.0",
     "mongodb": "^4.1.0",
