--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "@webcomponents/custom-elements": "^1.2.1",
     "@webcomponents/shadydom": "^1.4.3",
     "bootstrap": "^4.6.0",
+    "chalk": "^4.1.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "loglevel": "^1.8.0",
