--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha -w *.test.js -b",
-    "testMqttSync": "mocha -w MqttSync.test.js -b"
+    "testMqttSync": "mocha -w MqttSync.test.js -b",
+    "testCloud": "cd cloud && mocha -w *.test.js -b"
   },
   "dependencies": {
     "chalk": "^4.1.2",
