createWebComponent: expose a setConfig method to wrapped component
- that config can be retrieved using `getConfig` from the outside; intended use is in portal for embedding instructions

--- a/web/package.json
+++ b/web/package.json
@@ -31,7 +31,7 @@
     "loglevel": "^1.8.0",
     "mqtt-browser": "^4.2.7",
     "react-shadow-dom-retarget-events": "^1.0.8",
-    "semver": "^7.3.5"
+    "semver": "7.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
