--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "expect": "^28.1.0",
     "jest": "^28.0.3",
     "mocha": "^8.3.2"
+  },
+  "bin":{
+    "auto-update": "./bin/auto-update.js"
   }
 }
