Added prepack step to build documenation

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "scripts": {
     "test": "mocha -w *.test.js -b",
     "testMqttSync": "mocha -w MqttSync.test.js -b",
-    "testCloud": "cd cloud && mocha -w *.test.js -b"
+    "testCloud": "cd cloud && mocha -w *.test.js -b",
+    "prepack": "cat docs.js | node --input-type=module"
   },
   "dependencies": {
     "chalk": "^4.1.2",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "aedes": "^0.46.2",
+    "documentation": "^14.0.2",
     "expect": "^28.1.0",
     "jest": "^28.0.3",
     "mocha": "^8.3.2"
