restructured server utils

--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "mocha -w *.test.js -b",
+    "test": "mocha -w test/*.test.js -b",
     "testMqttSync": "mocha -w MqttSync.test.js -b",
     "testCloud": "cd cloud && mocha -w *.test.js -b",
-    "prepack": "cat docs.js | node --input-type=module"
+    "prepack": "cat docs.js | node --input-type=module - server common"
   },
   "dependencies": {
     "chalk": "^4.1.2",
