restructured web utils

--- a/web/package.json
+++ b/web/package.json
@@ -19,7 +19,7 @@
     "test": "webpack serve -c webpack-test.config.js",
     "build-test": "webpack -c webpack-test.config.js",
     "prepare": "webpack --no-watch --mode=production",
-    "prepack": "cat ../docs.js | node --input-type=module"
+    "prepack": "cat ../docs.js | node --input-type=module - client"
   },
   "dependencies": {
     "@babel/runtime": "^7.16.7",
