--- a/ros/package.json
+++ b/ros/package.json
@@ -17,7 +17,9 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watch",
-    "prepack": "cat ../docs.js | node --input-type=module - ros"
+    "prepack": "cat ../docs.js | node --input-type=module - ros",
+    "postpack": "git diff --quiet --exit-code || (echo 'Not clean, refusing to publish!\\n\\n' && exit 1)",
+    "postpublish": "git tag utils-ros@${npm_package_version}"
   },
   "dependencies": {
     "@transitive-sdk/utils": "^0.8.0"
