MqttSync: fixed performance issue when publishing a lot
- reduces O(n^2) check of publishedMessages to O(n) (or close to that)

Needed to fix #439.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha -w test/*.test.js -b",
-    "testMqttSync": "mocha -w MqttSync.test.js -b",
+    "testMqttSync": "mocha -w test/MqttSync.test.js -b",
     "testCloud": "cd cloud && mocha -w *.test.js -b",
     "prepack": "cat docs.js | node --input-type=module - server common"
   },
