--- a/ros/package.json
+++ b/ros/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@transitive-sdk/utils-ros",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Utils for using ROS with Transitive",
   "homepage": "https://transitiverobotics.com",
   "author": {
@@ -19,7 +19,8 @@
     "test": "jest --watch",
     "prepack": "cat ../docs.js | node --input-type=module - ros",
     "postpack": "git diff --quiet --exit-code || (echo 'Not clean, refusing to publish!\\n\\n' && exit 1)",
-    "postpublish": "git tag utils-ros@${npm_package_version}"
+    "postpublish": "git tag utils-ros@${npm_package_version}",
+    "postinstall": "./postinstall.sh"
   },
   "dependencies": {
     "@transitive-sdk/utils": "^0.8.0"
@@ -28,7 +29,6 @@
     "jest": "^29.7.0"
   },
   "optionalDependencies": {
-    "rclnodejs": "0.22.2",
     "rosnodejs": "github:chfritz/rosjs"
   }
 }
