--- a/ros/package.json
+++ b/ros/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.5",
   "description": "Utils for using ROS with Transitive",
   "homepage": "https://transitiverobotics.com",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/transitiverobotics/transitive-utils.git",
+    "directory": "ros"
+  },
   "author": {
     "name": "Christian Fritz",
     "email": "christian@transitiverobotics.com"
