--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,11 @@
   "version": "0.9.5",
   "description": "Web utils for the Transitive framework",
   "homepage": "https://transitiverobotics.com",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/transitiverobotics/transitive-utils.git",
+    "directory": "web"
+  },
   "author": {
     "name": "Christian Fritz",
     "email": "christian@transitiverobotics.com"
