--- a/caps/package.json
+++ b/caps/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@transitive-sdk/utils-caps",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Utilities to build and run Transitive capabilities in dev",
   "homepage": "https://transitiverobotics.com",
   "repository": {
@@ -17,11 +17,11 @@
     "robotics"
   ],
   "bin": {
-    "subScript": "subScript.sh",
     "transitiveDev": "transitiveDev.sh"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "cp subScript $npm_config_local_prefix/subScript"
   },
   "license": "Apache-2.0",
   "publishConfig": {
