--- a/web/package.json
+++ b/web/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "clean-css-cli": "^5.6.3",
+    "cors": "^2.8.5",
     "esbuild": "^0.19.11",
     "express": "^4.19.2",
     "extract-loader": "^5.1.0",
