--- a/web/package.json
+++ b/web/package.json
@@ -50,6 +50,7 @@
     "extract-loader": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.28.0",
     "websocket-stream": "^5.5.2"
   }
 }
