--- a/web/package.json
+++ b/web/package.json
@@ -36,6 +36,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "loglevel": "^1.8.0",
+    "loglevel-plugin-prefix": "^0.8.4",
     "mqtt": "^5.10.1",
     "react-shadow-dom-retarget-events": "^1.0.8",
     "react-web-component-style-loader": "^0.1.4-alpha",
