Fixed issues pointed out in PR, fixed payload storage
- removed hard-coded local URLs and credentials in tests
- we need to have bijective payload encoding and decoding in order not to lose the payload type
  - again using JSON.stringify and JSON.parse for this, just as in MQTTSync
  - updated test cases to reflect this (and what we want)
- fixed logic for ensuring the desired TTL (read it from the actual table)
- added `asterisk_include_materialized_columns` to ClickHouse session settings

--- a/clickhouse/package.json
+++ b/clickhouse/package.json
@@ -20,10 +20,15 @@
     "access": "public"
   },
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "mocha -w test/*.test.js -b"
+  },
   "dependencies": {
     "@clickhouse/client": "^1.12.1",
-    "@transitive-sdk/utils": "^0.14.0"
+    "@transitive-sdk/datacache": "^0.14.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "dotenv": "^17.2.3",
+    "mocha": "^11.7.5"
+  }
 }
